# transportmd

./: .gitignore  README.md  pyproject.toml
presentation/green_kubo/: green_kubo.ipynb  log.lammps
test/viscosity/: viscosity.py
transportmd/: trajectory.py
tutorial/lj_fluid/: lj_fluid.py  tutorial.ipynb
